добавление второго экрана

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,27 +1,24 @@
 <resources>
-    <string name="app_name">3zad</string>
+    <string name="app_name">3задание</string>
     <string name="text_name">имя</string>
     <string name="old">возраст</string>
     <string name="special">специальность</string>
     <string name="foto">фото</string>
     <string name="progect">проект</string>
     <string name="dost">достижения</string>
-    <string name="pelmeny"> <b> Способ приготовления:\n</b>
-Муку просеиваем на стол пару раз. В горке делаем углубление;\n
-Смешиваем яйца с водой, молоком и солью;\n
-Вливаем полученную смесь в углубление;\n
-Забираем муку от краев к серединке и вымешиваем тугое тесто;\n
-Чем больше вымешиваем основу, тем лучше. Оборачиваем тесто пищевой пленкой и убираем его в холодильник на 30-60 минут. В этом время займемся приготовлением фарша;\n
-Мясо промываем под струей проточной воды, обсушиваем бумажным полотенцем, нарезаем на куски со стороной 5 см;\n
-Лук измельчаем, чеснок очищаем;\n
-В мясорубку отправляем поочередно куски свинины, говядины, лук и чеснок;\n
-Полученный фарш хорошо перемешиваем ложкой, добавляем соль и перец, специи и пропускаем еще раз через мясорубку;\n
-Достаем тесто, раскатываем его тонким слоем и с помощью стакана делаем круглые заготовки;\n
-В центр каждой заготовки выкладываем фарш;\n
-Лепим пельмени, как указано выше;\n
-В кастрюле кипятим воду, добавляем немного соли, растительное масло, специи;\n
-Отправляем в кипящий бульон наши пельмени;\n
-Варим до готовности. Как правило, нужно 10-15 минут в зависимости от размера. Когда пельмени всплывут на поверхность – они готовы!;\n
-Подаем пельмени к столу горячими вместе с любимыми заправками;\n
-Теперь вы знаете, как приготовить пельмени в домашних условиях, чтобы они получились вкусными и ароматными. После приготовления полуфабрикат можно заморозить и доставать для варки по мере необходимости!</string>
+    <string name="pelmeny">
+ <h3><b>Ваше имя и контактные данные:</b></h3> +7 (900) 123-45-67 | ivan.petrov@email.com | linkedin.com/in/ivanpetrov \n\n
+        Целеустремлённый и опытный маркетолог с 5-летним опытом работы в сфере B2B и B2C, стремящийся получить должность
+        Старшего маркетолога в динамично развивающейся компании. Обладаю
+        глубокими знаниями в области digital-маркетинга, SEO, SMM и аналитики. Доказанный опыт увеличения вовлеченности
+        аудитории и повышения продаж.\n\n
+<b>Желаемая должность:</b> Менеджер по маркетингу\n\n
+<b>Опыт работы:</b>
+        Старший специалист по маркетингу, “Компания Рост” | Москва | 2020 – настоящее время\n
+
+<b>1 Разработал и реализовал стратегию digital-маркетинга, которая привела к увеличению продаж на 20% за 2 года.\n
+ 2 Увеличил вовлеченность аудитории в социальных сетях на 35% за счет применения новых тактик SMM и таргетированной рекламы.\n
+ 3 >Провел успешную SEO-оптимизацию сайта, что привело к росту органического трафика на 40%.\n
+ 4 Руководил командой из 3 специалистов по маркетингу.\n
+ 5</b>Участвовал в разработке и запуске новых продуктов.</string>
 </resources>
